Adding distribution list name pattern
