# routes/distribution_list.go
@@ -2,8 +2,12 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin/binding"
+
+	"github.com/go-playground/validator/v10"
 
 	c "github.com/notifique/controllers"
+	"github.com/notifique/internal"
 )
 
 func SetupDistributionListRoutes(r *gin.Engine, dls c.DistributionListStorage) {
@@ -18,5 +22,9 @@ func SetupDistributionListRoutes(r *gin.Engine, dls c.DistributionListStorage) {
 		v0.GET("/distribution-lists/:id/recipients", controller.GetRecipients)
 		v0.PATCH("/distribution-lists/:id/recipients", controller.AddRecipients)
 		v0.DELETE("/distribution-lists/:id/recipients", controller.DeleteRecipients)
+	}
+
+	if v, ok := binding.Validator.Engine().(*validator.Validate); ok {
+		v.RegisterValidation("distributionListName", internal.DLNameValidator)
 	}
 }
